[package]
name = "isodt"
version = "0.1.2"
edition = "2021"
description = "A simple CLI utility for converting a date to IS0-8601 format"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.5", features = ["derive"] }
regex = "1.8.4"
